--- a/lab1/TF_Part2_Music_Generation.ipynb
+++ b/lab1/TF_Part2_Music_Generation.ipynb
@@ -3,20 +3,11 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "uoJsVjtCMunI"
+        "id": "view-in-github",
+        "colab_type": "text"
       },
       "source": [
-        "<table align=\"center\">\n",
-        "  <td align=\"center\"><a target=\"_blank\" href=\"http://introtodeeplearning.com\">\n",
-        "        <img src=\"https://i.ibb.co/Jr88sn2/mit.png\" style=\"padding-bottom:5px;\" />\n",
-        "      Visit MIT Deep Learning</a></td>\n",
-        "  <td align=\"center\"><a target=\"_blank\" href=\"https://colab.research.google.com/github/MITDeepLearning/introtodeeplearning/blob/master/lab1/TF_Part2_Music_Generation.ipynb\">\n",
-        "        <img src=\"https://i.ibb.co/2P3SLwK/colab.png\"  style=\"padding-bottom:5px;\" />Run in Google Colab</a></td>\n",
-        "  <td align=\"center\"><a target=\"_blank\" href=\"https://github.com/MITDeepLearning/introtodeeplearning/blob/master/lab1/TF_Part2_Music_Generation.ipynb\">\n",
-        "        <img src=\"https://i.ibb.co/xfJbPmL/github.png\"  height=\"70px\" style=\"padding-bottom:5px;\"  />View Source on GitHub</a></td>\n",
-        "</table>\n",
-        "\n",
-        "# Copyright Information"
+        "<a href=\"https://colab.research.google.com/github/yonigresearch-wq/Intro_to_Deep_Learning/blob/master/lab1/TF_Part2_Music_Generation.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -76,7 +67,7 @@
         "!pip install comet_ml > /dev/null 2>&1\n",
         "import comet_ml\n",
         "# TODO: ENTER YOUR API KEY HERE!! instructions above\n",
-        "COMET_API_KEY = \"\"\n",
+        "COMET_API_KEY = '3A1WbyHwdFKdCWq3DxhSJGRY1'\n",
         "\n",
         "# Import Tensorflow 2.0\n",
         "import tensorflow as tf\n",
@@ -337,10 +328,13 @@
         "  idx = np.random.choice(n-seq_length, batch_size)\n",
         "\n",
         "  '''TODO: construct a list of input sequences for the training batch'''\n",
-        "  input_batch = # TODO\n",
-        "\n",
+        "  input_batch = []\n",
         "  '''TODO: construct a list of output sequences for the training batch'''\n",
-        "  output_batch = # TODO\n",
+        "  output_batch = []\n",
+        "\n",
+        "  for i in range(batch_size):\n",
+        "    input_batch.append(vectorized_songs[idx[i]:(idx[i] + seq_length)])\n",
+        "    output_batch.append(vectorized_songs[(idx[i]+1):(idx[i] + seq_length + 1)])\n",
         "\n",
         "  # x_batch, y_batch provide the true inputs and targets for network training\n",
         "  x_batch = np.reshape(input_batch, [batch_size, seq_length])\n",
@@ -471,18 +465,18 @@
         "\n",
         "    # Layer 2: LSTM with `rnn_units` number of units.\n",
         "    # TODO: Call the LSTM function defined above to add this layer.\n",
-        "    LSTM('''TODO'''),\n",
+        "    LSTM(rnn_units=rnn_units),\n",
         "\n",
         "    # Layer 3: Dense (fully-connected) layer that transforms the LSTM output\n",
-        "    #   into the vocabulary size.\n",
+        "    # into the vocabulary size.\n",
         "    # TODO: Add the Dense layer.\n",
-        "    '''TODO: DENSE LAYER HERE'''\n",
+        "    tf.keras.layers.Dense(units=vocab_size, activation='softmax')\n",
         "  ])\n",
         "\n",
         "  return model\n",
         "\n",
         "# Build a simple model with default hyperparameters. You will get the\n",
-        "#   chance to change these later.\n",
+        "# chance to change these later.\n",
         "model = build_model(len(vocab), embedding_dim=256, rnn_units=1024, batch_size=32)\n",
         "model.build(tf.TensorShape([32, 100]))  # [batch_size, sequence_length]"
       ]
@@ -625,12 +619,12 @@
         "'''TODO: define the loss function to compute and return the loss between\n",
         "    the true labels and predictions (logits). Set the argument from_logits=True.'''\n",
         "def compute_loss(labels, logits):\n",
-        "  loss = tf.keras.losses.sparse_categorical_crossentropy('''TODO''', '''TODO''', from_logits=True) # TODO\n",
+        "  loss = tf.keras.losses.sparse_categorical_crossentropy(labels, logits, from_logits=True) # TODO\n",
         "  return loss\n",
         "\n",
         "'''TODO: compute the loss using the true next characters from the example batch\n",
         "    and the predictions from the untrained model several cells above'''\n",
-        "example_batch_loss = compute_loss('''TODO''', '''TODO''') # TODO\n",
+        "example_batch_loss = compute_loss(y, pred) # TODO\n",
         "\n",
         "print(\"Prediction shape: \", pred.shape, \" # (batch_size, sequence_length, vocab_size)\")\n",
         "print(\"scalar_loss:      \", example_batch_loss.numpy().mean())"
@@ -659,12 +653,12 @@
         "\n",
         "# Model parameters:\n",
         "params = dict(\n",
-        "  num_training_iterations = 3000,  # Increase this to train longer\n",
-        "  batch_size = 8,  # Experiment between 1 and 64\n",
-        "  seq_length = 100,  # Experiment between 50 and 500\n",
-        "  learning_rate = 5e-3,  # Experiment between 1e-5 and 1e-1\n",
+        "  num_training_iterations = 10**4,  # Increase this to train longer\n",
+        "  batch_size = 64,  # Experiment between 1 and 64\n",
+        "  seq_length = 50,  # Experiment between 50 and 500\n",
+        "  learning_rate = 0.0001,  # Experiment between 1e-5 and 1e-1\n",
         "  embedding_dim = 256,\n",
-        "  rnn_units = 1024,  # Experiment between 1 and 2048\n",
+        "  rnn_units = 2048,  # Experiment between 1 and 2048\n",
         ")\n",
         "\n",
         "# Checkpoint location:\n",
@@ -701,7 +695,8 @@
         "  # initiate the comet experiment for tracking\n",
         "  experiment = comet_ml.Experiment(\n",
         "                  api_key=COMET_API_KEY,\n",
-        "                  project_name=\"6S191_Lab1_Part2\")\n",
+        "                  project_name=\"6S191_Lab1_Part2_TF\")\n",
+        "\n",
         "  # log our hyperparameters, defined above, to the experiment\n",
         "  for param, value in params.items():\n",
         "    experiment.log_parameter(param, value)\n",
@@ -725,23 +720,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "F31vzJ_u66cb"
-      },
-      "outputs": [],
       "source": [
         "### Define optimizer and training operation ###\n",
         "\n",
         "'''TODO: instantiate a new model for training using the `build_model`\n",
         "  function and the hyperparameters created above.'''\n",
-        "model = build_model('''TODO: arguments''')\n",
+        "model = build_model(embedding_dim=params['embedding_dim'],\n",
+        "                    rnn_units=params['rnn_units'],\n",
+        "                    batch_size=params['batch_size'],\n",
+        "                    vocab_size=vocab_size)\n",
         "\n",
         "'''TODO: instantiate an optimizer with its learning rate.\n",
         "  Checkout the tensorflow website for a list of supported optimizers.\n",
         "  https://www.tensorflow.org/api_docs/python/tf/keras/optimizers/\n",
         "  Try using the Adam optimizer to start.'''\n",
-        "optimizer = # TODO\n",
+        "optimizer = tf.optimizers.Adam(learning_rate=params['learning_rate'])\n",
         "\n",
         "@tf.function\n",
         "def train_step(x, y):\n",
@@ -749,10 +742,10 @@
         "  with tf.GradientTape() as tape:\n",
         "\n",
         "    '''TODO: feed the current input into the model and generate predictions'''\n",
-        "    y_hat = model('''TODO''')\n",
+        "    y_hat = model(x)\n",
         "\n",
         "    '''TODO: compute the loss!'''\n",
-        "    loss = compute_loss('''TODO''', '''TODO''')\n",
+        "    loss = compute_loss(labels=y, logits=y_hat)\n",
         "\n",
         "  # Now, compute the gradients\n",
         "  '''TODO: complete the function call for gradient computation.\n",
@@ -760,7 +753,7 @@
         "      of the model parameters.\n",
         "      HINT: use `model.trainable_variables` to get a list of all model\n",
         "      parameters.'''\n",
-        "  grads = tape.gradient('''TODO''', '''TODO''')\n",
+        "  grads = tape.gradient(loss, model.trainable_variables)\n",
         "\n",
         "  # Apply the gradients to the optimizer so it can update the model accordingly\n",
         "  optimizer.apply_gradients(zip(grads, model.trainable_variables))\n",
@@ -793,8 +786,15 @@
         "\n",
         "# Save the trained model and the weights\n",
         "model.save_weights(checkpoint_prefix)\n",
-        "experiment.flush()\n"
-      ]
+        "experiment.flush()\n",
+        "\n",
+        "print(\"\\n\\n-------------CELL REACHED THE END!---------------\")"
+      ],
+      "metadata": {
+        "id": "MbN45-OfQx7U"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -834,7 +834,10 @@
       "outputs": [],
       "source": [
         "'''TODO: Rebuild the model using a batch_size=1'''\n",
-        "model = build_model('''TODO''', '''TODO''', '''TODO''', batch_size=1)\n",
+        "model = build_model(embedding_dim=params['embedding_dim'],\n",
+        "                    rnn_units=params['rnn_units'],\n",
+        "                    vocab_size=vocab_size,\n",
+        "                    batch_size=1)\n",
         "\n",
         "# Restore the model weights for the last checkpoint after training\n",
         "model.build(tf.TensorShape([1, None]))\n",
@@ -889,7 +892,7 @@
         "  # Evaluation step (generating ABC text using the learned RNN model)\n",
         "\n",
         "  '''TODO: convert the start string to numbers (vectorize)'''\n",
-        "  input_eval = ['''TODO''']\n",
+        "  input_eval = vectorize_string(start_string)\n",
         "  input_eval = tf.expand_dims(input_eval, 0)\n",
         "\n",
         "  # Empty string to store our results\n",
@@ -903,13 +906,13 @@
         "\n",
         "  for i in tqdm(range(generation_length)):\n",
         "      '''TODO: evaluate the inputs and generate the next character predictions'''\n",
-        "      predictions = model('''TODO''')\n",
+        "      predictions = model(input_eval)\n",
         "\n",
         "      # Remove the batch dimension\n",
         "      predictions = tf.squeeze(predictions, 0)\n",
         "\n",
         "      '''TODO: use a multinomial distribution to sample'''\n",
-        "      predicted_id = tf.random.categorical('''TODO''', num_samples=1)[-1,0].numpy()\n",
+        "      predicted_id = tf.random.categorical(predictions, num_samples=1)[-1,0].numpy()\n",
         "\n",
         "      # Pass the prediction along with the previous hidden state\n",
         "      #   as the next inputs to the model\n",
@@ -917,7 +920,7 @@
         "\n",
         "      '''TODO: add the predicted character to the generated text!'''\n",
         "      # Hint: consider what format the prediction is in vs. the output\n",
-        "      text_generated.append('''TODO''')\n",
+        "      text_generated.append(idx2char[predicted_id])\n",
         "\n",
         "  return (start_string + ''.join(text_generated))"
       ]
@@ -932,8 +935,19 @@
       "source": [
         "'''TODO: Use the model and the function defined above to generate ABC format text of length 1000!\n",
         "    As you may notice, ABC files start with \"X\" - this may be a good start string.'''\n",
-        "generated_text = generate_text('''TODO''', start_string=\"X\", generation_length=1000)"
+        "generated_text = generate_text(model=model, start_string=\"X\", generation_length=1000)"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "generated_text"
+      ],
+      "metadata": {
+        "id": "B8gf2IlXVydY"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -974,7 +988,7 @@
         "    write(wav_file_path, 88200, numeric_data)\n",
         "\n",
         "    # save your song to the Comet interface -- you can access it there\n",
-        "    experiment.log_asset(wav_file_path)"
+        "    experiment.log_asset(wav_file_path)\n"
       ]
     },
     {
@@ -1029,7 +1043,8 @@
         "uoJsVjtCMunI"
       ],
       "provenance": [],
-      "gpuType": "T4"
+      "gpuType": "T4",
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
